# spinlock

./: .env.example  .gitignore  CHANGELOG.md  ISSUE_VQ_LED_DIMENSION_MISMATCH.md  README.md  VISUALIZATION_FEATURES.md  analysis_problematic_params.npz  profiling_results_10_samples.txt  pyproject.toml  test.sh  test_metadata_tracking.py  test_vqvae_config.yaml  verify_test_dataset.py
configs/: vqvae_10k_temporal_training.yaml  vqvae_1k_full_training.yaml
configs/cloud/: README.md  lambda_labs_100.yaml  lambda_labs_100k.yaml  lambda_labs_test_10.yaml
configs/experiments/: benchmark_10k.yaml  default_10k.yaml  domain_ics_all_21.yaml  local_100k_optimized.yaml  noa_training_1k.yaml  test_100.yaml  test_100_temporal_initial.yaml  test_10_inline_features.yaml  test_10_temporal_ic.yaml  test_1k_inline_features.yaml  test_2k_phase1_phase2.yaml  test_512_optimized.yaml  test_cuda_opt.yaml  test_hybrid_summary.yaml  test_stream_benchmark.yaml  u_afno_100k.yaml
configs/features/: architecture_extraction.yaml  ic_extraction_10k.yaml  ic_extraction_test.yaml  initial_extraction_10k.yaml  initial_extraction_test.yaml  nop_extraction.yaml  test_architecture.yaml  test_nop.yaml
configs/noa/: mse_led_baseline.yaml  vq_led_creative.yaml
configs/vqvae/: README.md  adaptive_compression_example.yaml  default.yaml  ic_nop_example.yaml  initial_architecture_example.yaml  multi_family_example.yaml  production.json  sd_category_mapping.json  sd_features_1k_auto.yaml  summary_1k.yaml  summary_1k_auto.yaml  (+1 more)
docs/: adaptive_compression_diagnostic_comparison.md  adaptive_compression_ratios.md  adaptive_compression_results.md  architecture.md  getting-started.md  installation.md  interpretability-methodology.md  noa-architecture.md  noa-roadmap.md  noa-training-guide.md  vqvae-mvp-implementation.md
notes/: README.md  RESUME-2026-01-06-vqvae-alignment-nan-fix.md  neural-operator-agent-planning.md  noa-aligned-feature-extraction.md  poc-quality.md
profiling_results/: profile_4ops_100t_2r_category_20260102_183140.csv  profile_4ops_100t_2r_category_20260102_183140.json  profile_4ops_100t_2r_category_20260102_184033.csv  profile_4ops_100t_2r_category_20260102_184033.json  profile_4ops_100t_2r_category_20260102_184545.csv  profile_4ops_100t_2r_category_20260102_184545.json  profile_4ops_100t_2r_category_20260102_184656.csv  profile_4ops_100t_2r_category_20260102_184656.json  profile_4ops_100t_2r_category_20260102_184739.csv  profile_4ops_100t_2r_category_20260102_184739.json  profile_4ops_100t_2r_category_20260102_191701.csv  profile_4ops_100t_2r_category_20260102_191701.json  profile_4ops_100t_2r_feature_20260102_184319.csv  profile_4ops_100t_2r_feature_20260102_184319.json
scripts/: cli.py  discover_sd_categories.py  monitor_10k_generation.sh  monitor_generation.sh  monitor_generation_simple.sh  spinlock.py  validate_tier1_ics.py  validate_tier2_ics.py
src/spinlock/cuda/: CMakeLists.txt  PIVOT_TO_TORCH_COMPILE.md  setup.py
src/spinlock/cuda/include/: error_handling.h  launch_config.h  tensor_descriptor.h  warp_primitives.h
src/spinlock/cuda/python/: __init__.py
src/spinlock/cuda/src/bindings/: torch_bindings.cpp
src/spinlock/cuda/src/common/: dummy_kernel.cu
src/spinlock/cuda/tests/unit/: test_infrastructure.py
tests/: test_ic_extraction.py  test_initial_extraction.py  test_td_features.py  test_temporal_features.py  test_weighted_choice_parameters.py
(+365 files in other folders)
